--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mehraj Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome to </h1>
+            <h1><span class="col-org">Ms </span>World !</h1>
+            <h3>build climber and train Stopper</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur sit sapiente corrupti illum, amet
+                    voluptas hic. Expedita vitae nulla molestias! Perspiciatis est vel reprehenderit maxime sint
+                    consectetur. Facilis autem natus laboriosam sed voluptates sunt ab dolore ut. Consectetur maiores
+                    veritatis est iure totam, ipsam enim perspiciatis fuga delectus quia. Sed!</p>
+                    <a class="link-button" target="_blank" href="https://www.facebook.com">HIRE ME</a>
+           
+        </div>
+
+        <div class="half-width">
+            <img src="images/1.jpg" alt="abir">
+        </div>
+    </section>
 </body>
+
 </html>
