dream big added

--- a/index.html
+++ b/index.html
@@ -30,6 +30,22 @@
             <img src="images/1.jpg" alt="abir">
         </div>
     </section>
+
+    <section class="dream-big">
+        <div class="half-width" >
+            <img src="images/2.jpg" alt="">
+
+        </div>
+
+        <div class="half-width">
+            <h1>DRAM BIG</h1>
+            <h2>Become a Web developer</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore molestiae voluptas voluptatem eaque esse numquam fugit accusamus exercitationem a voluptatibus!</p>
+            <a class="link-button" target="_blank" href="">DWONLOAD RESUME</a>
+
+        </div>
+
+    </section>
 </body>
 
 </html>
