--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome to </h1>
             <h1><span class="col-org">Ms </span>World !</h1>
@@ -31,10 +31,9 @@
         </div>
     </section>
 
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width" >
             <img src="images/2.jpg" alt="">
-
         </div>
 
         <div class="half-width">
@@ -42,10 +41,30 @@
             <h2>Become a Web developer</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore molestiae voluptas voluptatem eaque esse numquam fugit accusamus exercitationem a voluptatibus!</p>
             <a class="link-button" target="_blank" href="">DWONLOAD RESUME</a>
-
         </div>
-
     </section>
+
+    <section class="experience-area">
+        <h1>Experience</h1>
+        <div class="flexible-container">
+           
+            <div id="full-stac-dev" class="experience-item">
+                <h2 class="col-org">Full stack developer</h2>
+                <h3>2020 | Pro leraner</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo, ea?</p>
+
+             </div>
+             <div id="baby-web-dev" class="experience-item">
+                <h2 class="col-org">Baby Web developer</h2>
+                <h3>2023 | become developer</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, voluptatum.</p>
+    
+             </div>   
+        </div>
+    </section>
+    <footer>
+        <p>@Mehraj | a programming hero initative</p>
+    </footer>
 </body>
 
 </html>
